# imclass

./: CMakeLists.txt  README.md
include/: jpgImage.h  processImage.h
ipp_blur_rotate_sample/: Makefile  readme.htm
ipp_blur_rotate_sample/src/: bmpreader.cpp  bmpreader.h  ipp_blur_rotate.cpp  ipp_blur_rotate.h  ipp_blur_rotate_video.h  main.cpp
ipp_blur_rotate_sample/src/gui/: Makefile.gmake  gdivideo.cpp  macvideo.cpp  video.h  winvideo.h  xvideo.cpp
ipp_blur_rotate_sample/src/gui/xcode/guiExample/: Info.plist  OpenGLView.h  OpenGLView.m  guiAppDelegate.h  guiAppDelegate.m  guiExample-Info.plist  guiExample-Prefix.pch  main.m
jpgImage/: CMakeLists.txt  jpgImage.cpp  main.cpp
pngImage/: CMakeLists.txt  image.cpp  image.h  main.cpp  pngImage.cpp  pngImage.h  processImage.h
src/: CMakeLists.txt  processImage.cpp
